...
            colors = ButtonDefaults.buttonColors(backgroundColor = MaterialTheme.colors.primary),
            modifier = Modifier
                .fillMaxWidth()
                .height(50.dp)

        ) {
            Text(text = "Сохранить", color = MaterialTheme.colors.onPrimary)
        }

        Spacer(modifier = Modifier.height(8.dp))

        Button(
            onClick = onCancel,
            colors = ButtonDefaults.buttonColors(backgroundColor = MaterialTheme.colors.onSurface.copy(alpha = 0.12f)),
            modifier = Modifier
                .fillMaxWidth()
                .height(45.dp)
                .testTag("CancelHabitScreenBox")
        ) {
            Text(text = "Отмена", color = MaterialTheme.colors.onSurface)
        }
    }
}

